--- a/register_success.html
+++ b/register_success.html
@@ -1,5 +1,9 @@
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
+	</head>
 	<body>
 		<h1>Successfully Registered!</h1>
+		<button onclick="location.href = './login.php';" id="login">To Login</button>
 	</body>
 </html>
