--- a/register_success.html
+++ b/register_success.html
@@ -1,9 +1,63 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
-	</head>
-	<body>
-		<h1>Successfully Registered!</h1>
-		<button onclick="location.href = './login.php';" id="login">To Login</button>
-	</body>
+  <head>
+    <title>SuccessRegister</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
+    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="files/successregister/styles.css" type="text/css" rel="stylesheet"/>
+    <script src="data/document.js"></script>
+    <script src="files/successregister/data.js"></script>
+    <script type="text/javascript">
+      $axure.utils.getTransparentGifPath = function() { return 'resources/images/transparent.gif'; };
+      $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
+      $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
+    </script>
+  </head>
+  <body>
+    <div id="base" class="">
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u121" class="ax_default box_1">
+        <div id="u121_div" class=""></div>
+        <div id="u121_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u122" class="ax_default button">
+        <div id="u122_div" class=""></div>
+        <div id="u122_text" class="text ">
+          <p onclick="location.href = './login.php';"><span onclick="location.href = './login.php';" style="text-decoration:none;">Login</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u123" class="ax_default paragraph">
+        <div id="u123_div" class=""></div>
+        <div id="u123_text" class="text ">
+          <p><span style="text-decoration:none;">health-care centre </span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Shape) -->
+      <div id="u124" class="ax_default icon">
+        <img id="u124_img" class="img " src="images/register/u30.svg"/>
+        <div id="u124_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u125" class="ax_default paragraph">
+        <div id="u125_div" class=""></div>
+        <div id="u125_text" class="text ">
+          <p><span style="text-decoration:none;">Successfully Registered! Please activate your account by the link in your email.</span></p>
+        </div>
+      </div>
+    </div>
+    <script src="resources/scripts/axure/ios.js"></script>
+  </body>
 </html>
